# toDoApp/docs/swagger.json
@@ -59,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/todo.TaskRequest"
+                            "$ref": "#/definitions/todo.TaskCreateRequest"
                         }
                     }
                 ],
@@ -127,7 +127,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/todo.Task"
+                            "$ref": "#/definitions/todo.TaskUpdateRequest"
                         }
                     }
                 ],
@@ -164,11 +164,26 @@
         }
     },
     "definitions": {
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
         "todo.Task": {
             "type": "object",
             "properties": {
                 "createdAt": {
                     "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "description": {
                     "type": "string"
@@ -177,12 +192,15 @@
                     "type": "boolean"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "task_id": {
                     "type": "string"
                 },
                 "title": {
                     "type": "string"
                 },
-                "toDo": {
+                "todo": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -190,8 +208,13 @@
                 }
             }
         },
-        "todo.TaskRequest": {
+        "todo.TaskCreateRequest": {
             "type": "object",
+            "required": [
+                "description",
+                "title",
+                "todo"
+            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -199,7 +222,24 @@
                 "title": {
                     "type": "string"
                 },
-                "toDo": {
+                "todo": {
+                    "type": "string"
+                }
+            }
+        },
+        "todo.TaskUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "done": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "todo": {
                     "type": "string"
                 }
             }
