# toDoApp/internal/todo/model.go
@@ -9,19 +9,20 @@ import (
 
 type Task struct {
 	gorm.Model
-	TaskID      []byte    `json:"task_id" gorm:"uniqueIndex"`
+	TaskID      uuid.UUID `json:"task_id" gorm:"uniqueIndex"`
 	Title       string    `json:"title"`
 	Description string    `json:"description"`
 	Done        bool      `json:"done"`
 	ToDo        time.Time `json:"todo"`
 }
 
-func NewTask(title string, description string, todo time.Time) *Task {
-	u := uuid.New()
-	uBytes := u[:]
+func generateUUID() uuid.UUID {
+	return uuid.MustParse(uuid.New().String())
+}
 
+func NewTask(title string, description string, todo time.Time) *Task {
 	return &Task{
-		TaskID:      uBytes,
+		TaskID:      generateUUID(),
 		Title:       title,
 		Description: description,
 		Done:        false,
